fix: Correct text alignment

--- a/assets/styles/_home.scss
+++ b/assets/styles/_home.scss
@@ -81,7 +81,7 @@
 
 &-content {
     font-size: 1.3rem;
-    margin: auto;
+    margin-left: auto;
     margin-bottom: 10vh;
     line-height: 1.5;
     margin-top: app-spacing(3);
